# pyNetLogo

./: .gitignore  .travis.yml  LICENSE.md  README.md  demo.py  pyproject.toml  readthedocs-environment.yml  readthedocs.yml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
Example/: Wolf Sheep Predation_v5.nlogo  Wolf Sheep Predation_v6.nlogo  pyNetLogo demo - SALib parallel.ipynb  pyNetLogo demo - SALib sequential.ipynb  pyNetLogo demo.ipynb
docs/: make.bat
docs/source/: changelog.rst  conf.py  demo.rst  example1.rst  example2.rst  index.rst  install.rst  pyNetLogo demo - SALib parallel.ipynb  pyNetLogo demo.ipynb
docs/source/_docs/: SALib_ipyparallel.ipynb  SALib_multiprocessing.ipynb  countdown.xlsx  introduction.ipynb  pyNetLogo demo - SALib sequential.ipynb  pyNetLogo.rst  pynetlogo.rst
examples/: SALib_ipyparallel.ipynb  SALib_multiprocessing.ipynb  SALib_sequential.ipynb  Sobol_sequential.csv  Untitled.ipynb  demo.py  predprey_salib_multiprocessing.py  predprey_sequential.py
examples/07y8dned/: [energy] of sheep.txt  count sheep.txt  count wolves.txt
pyNetLogo/: .project  .pydevproject  __init__.py  core.py  pyNetLogo.py  pynetlogo.py
pyNetLogo/java/: readme.md
pyNetLogo/java/NetLogoLinkV5/: NLResult.java
pyNetLogo/pyNetLogo/: netlogo.py  pyNetLogo.py
pyNetLogo/trail/: trial_code.py
src/: README  Wolf Sheep Predation.nlogo  demo.py  pyNetLogo demo.ipynb
src/pyNetLogo/: pyNetLogo.py
src/pynetlogo/: __init__.py  core.py
src/tests/: test_netlogo.py
tests/: Untitled.ipynb  test_netlogo.py  trial_code.py
(+22 files in other folders)
